force-app/main/default/objects/HAM_Track_Session__c/HAM_Track_Session__c.object-meta.xml
<CustomObject>
    <label>Track Session</label>
    <nameField>
        <displayFormat>TS-{000000}</displayFormat>
        <label>Track Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Track Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>