force-app/main/default/objects/HAM_Track_Session__c/fields/HAM_Session__c.field-meta.xml
<CustomField>
    <fullName>HAM_Session__c</fullName>
    <description>Links this record to the parent Session.</description>
    <inlineHelpText>Select the Session assigned to this Track.</inlineHelpText>
    <label>Session</label>
    <referenceTo>HAM_Event_Session__c</referenceTo>
    <relationshipLabel>Track Sessions</relationshipLabel>
    <relationshipName>Track_Sessions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>