force-app/main/default/objects/HAM_Track_Session__c/fields/HAM_Track__c.field-meta.xml
<CustomField>
    <fullName>HAM_Track__c</fullName>
    <description>Links this record to the parent Track.</description>
    <inlineHelpText>Select the Track this session belongs to.</inlineHelpText>
    <label>Track</label>
    <referenceTo>HAM_Track__c</referenceTo>
    <relationshipLabel>Track Sessions</relationshipLabel>
    <relationshipName>Track_Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>